version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/MPDataCommand.rst.txt
.. vale off



:class:`MPDataCommand`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.MPDataCommand(iMPDataCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IMPDataCommand)

   Bases: :py:obj:`object`


   
   Represents a MPDATA command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MPDataCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Lab`
            - Gets the label.
          * - :py:attr:`~Mat`
            - Gets the material number.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Temps`
            - Gets the temperatures.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[str]


   
   Gets the label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Mat
   :type: Optional[int]


   
   Gets the material number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Temps
   :type: Optional[tuple[float]]


   
   Gets the temperatures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on